...
            android:src="@drawable/bg_header_home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ic_btn_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="55dp"
            android:background="@color/transparant"
            android:contentDescription="@string/setting"
            android:src="@drawable/baseline_settings_30"
...
